# elevated-command

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  linux.rs  macos.rs  windows.rs
