[package]
name = "elevated-command"
description = "Run a command using sudo, prompting the user with an OS dialog if necessary"
homepage = "https://github.com/vangork/elevated-command"
repository = "https://github.com/vangork/elevated-command"
documentation = "https://docs.rs/elevated-command"
authors = ["Luis Liu <vangork@live.com>"]
license = "MIT"
readme = "README.md"
version = "1.1.2"
edition = "2021"

include = [
    "README.md",
    "LICENSE",
    "src/**",
]

[dependencies]
anyhow = "1.0"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
winapi = { version = "0.3.9", features = ["securitybaseapi", "processthreadsapi"] }

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21.5"
